fixing gap for header on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -276,7 +276,8 @@
   .header {
     width: 100vw;
     margin-top: -65rem !important;
-    column-gap: 30rem;
+    justify-content: safe;
+    gap: 40rem;
   }
 
   .title {
